K-means working for a case study in Antarctica

--- a/scripts/Antarctica_kmeans_test1.ipynb
+++ b/scripts/Antarctica_kmeans_test1.ipynb
@@ -1,10 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 55,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "<h1>First full pipeline test on Antarctica</h1>\n",
+    "<p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/proplot/config.py:1454: ProPlotWarning: Rebuilding font cache.\n"
+     ]
+    }
+   ],
    "source": [
     "from icepyx import icesat2data as ipd\n",
     "import numpy as np\n",
@@ -15,21 +31,21 @@
     "import cartopy.crs as ccrs\n",
     "import sys\n",
     "import pyproj\n",
-    "import pointCollection as pc\n",
+    "import proplot as plot\n",
     "\n",
     "%matplotlib widget"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Earthdata Login password:  ·············\n"
+      "Earthdata Login password:  ··········\n"
      ]
     }
    ],
@@ -38,12 +54,16 @@
     "spatial_extent = [31.5, -70.56, 33.73, -69.29]\n",
     "date_range = ['2020-03-30','2020-04-1']\n",
     "region_a = ipd.Icesat2Data(short_name, spatial_extent, date_range)\n",
-    "region_a.earthdata_login('kmsejan','kmsejan@uu.nl')"
+    "\n",
+    "username = \"JordiBN\"\n",
+    "email = \"jordi.bolibar@univ-grenoble-alpes.fr\"\n",
+    "\n",
+    "region_a.earthdata_login(username,email)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -70,12 +90,12 @@
      "text": [
       "Total number of data order requests is  1  for  1  granules.\n",
       "Data request  1  of  1  is submitting to NSIDC\n",
-      "order ID:  5000000701676\n",
+      "order ID:  5000000701699\n",
       "Initial status of your order request at NSIDC is:  processing\n",
       "Your order status is still  processing  at NSIDC. Please continue waiting... this may take a few moments.\n",
       "Your order is: complete\n",
       "Beginning download of zipped output...\n",
-      "Data request 5000000701676 of  1  order(s) is downloaded.\n",
+      "Data request 5000000701699 of  1  order(s) is downloaded.\n",
       "Download complete\n"
      ]
     }
@@ -86,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,19 +123,20 @@
     "\n",
     "#latitude = f['/gt2r/heights/lat_ph']\n",
     "#longitude = f['/gt2r/heights/lon_ph']\n",
-    "#height = f['gt2r/heights/h_ph']"
+    "#height = f['gt2r/heights/h_ph']\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Removing the data far from surface in each histogram."
+    "\n",
+    "Cropping the data far from surface in each histogram."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,13 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edf798ed95c7464f898ac335df739649",
+       "model_id": "775382cf22f340e0985523c5d679cd75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,13 +169,22 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:3: MatplotlibDeprecationWarning: Adding an axes using the same arguments as a previous axes currently reuses the earlier instance.  In a future version, a new instance will always be created and returned.  Meanwhile, this warning can be suppressed, and the future behavior ensured, by passing a unique label to each axes instance.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
     }
    ],
    "source": [
     "\n",
     "fig=plt.figure(figsize=(10,8))\n",
+    "plt.title(\"Training data\")\n",
     "ax = fig.add_subplot(111)\n",
-    "h = ax.imshow(data,vmin=0,vmax=30,cmap='Reds')\n",
+    "h = ax.imshow(np.transpose(data),vmin=0,vmax=30,cmap='inferno')\n",
     "plt.colorbar(h)\n",
     "plt.show()"
    ]
@@ -167,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,17 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "! cd ..; [ -d pointCollection ] || git clone https://www.github.com/smithB/pointCollection.git\n",
-    "sys.path.append(os.path.join(os.getcwd(), '..'))"
+    "sys.path.append(os.path.join(os.getcwd(), '..'))\n",
+    "import pointCollection as pc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +239,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd7626385b814e2e9e1f99b3ad2410f3",
+       "model_id": "a4da60914ef34af9ae835ad6aab1a760",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,7 +263,7 @@
        "Text(0.5, 1.0, ' Area used for search')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,6 +285,8 @@
     "plt.figure()\n",
     "MOA.show(cmap='gray', clim=[14000, 17000])\n",
     "plt.plot(xy[0,:], xy[1,:])\n",
+    "# This still needs to be fixed in order to properly display the transect on the map\n",
+    "#plt.plot(lon_mean,lat_mean,transform=ccrs.SouthPolarStereo(), c='darkred')\n",
     "plt.title(' Area used for search')"
    ]
   },
@@ -253,29 +294,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2> A different way of plotting track on map</a>"
+    "<h2> Plotting track on map</a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52307dc36ac84201a7edbf653250b6a1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spatial_extent_ps = [spatial_extent[0], spatial_extent[2], spatial_extent[1], spatial_extent[3]]\n",
     "\n",
@@ -301,13 +327,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(h_lon,h_lat,'ob' )\n",
+    "plt.plot(lon_mean, lat_mean,'.r')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Unsupervised learning of ATL06 residual histograms</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data shape: (523, 350)\n",
+      "\n",
+      "Classified labels: [2 2 2 2 2 0 0 0 0 0 0 0 2 2 0 0 0 0 2 0 0 0 0 0 0 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 0 2 2 0 0 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 0 2 2 2 2 0 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 0 0 0 2 2 2 2 2 2 2 2 2 0 2 2 2 2 2 2 0 0 0 2 2 2 0 0 0 0 0 0 0 0 0 2 2 0\n",
+      " 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 1 1 1 1 1 1 0 0 0 0 0 1 1 3 3 1 1 1 3 1 3 1\n",
+      " 1 0 0 1 1 3 3 3 3 3 3 1 1 0 1 3 1 0 0 0 0 0 1 3 1 1 0 0 1 1 1 1 3 3 1 3 1\n",
+      " 1 1 1 1 1 1 3 1 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 1 1 3 3 3 3\n",
+      " 3 1 1 3 3 1 0 0 0 0 0 0 0 0 0 0 0 2 0 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0\n",
+      " 2 0 0 0 0 0 0 0 0 0 0 2 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 1 1 3 3 3 3 3 3 3 3\n",
+      " 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3\n",
+      " 3 3 3 3 3]\n",
+      "\n",
+      "K-means labels shape: (523,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Training data shape: \" + str(data.shape))\n",
+    "\n",
+    "# Use int random_state in order to make centroid initialization deterministic\n",
+    "kmeans = KMeans(n_clusters=4, random_state=None).fit(data)\n",
+    "\n",
+    "# Display classified labels\n",
+    "print(\"\\nClassified labels: \" + str(kmeans.labels_))\n",
+    "\n",
+    "print(\"\\nK-means labels shape: \" + str(kmeans.labels_.shape))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We plot the classified labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "array([3, 3, 3, 3, 3, 1, 1, 1, 1, 1, 1, 1, 3, 3, 1, 1, 1, 1, 3, 1, 1, 1,\n",
+       "       1, 1, 1, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 1, 3, 3, 1, 1,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 1, 3, 3, 3, 3, 1, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
+       "       3, 3, 1, 1, 1, 3, 3, 3, 3, 3, 3, 3, 3, 3, 1, 3, 3, 3, 3, 3, 3, 1,\n",
+       "       1, 1, 3, 3, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1, 3, 3, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 2, 2, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1, 2,\n",
+       "       2, 4, 4, 2, 2, 2, 4, 2, 4, 2, 2, 1, 1, 2, 2, 4, 4, 4, 4, 4, 4, 2,\n",
+       "       2, 1, 2, 4, 2, 1, 1, 1, 1, 1, 2, 4, 2, 2, 1, 1, 2, 2, 2, 2, 4, 4,\n",
+       "       2, 4, 2, 2, 2, 2, 2, 2, 2, 4, 2, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 2, 2, 4, 4, 4, 4, 4, 2, 2, 4,\n",
+       "       4, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 3, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       3, 1, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2,\n",
+       "       2, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4,\n",
+       "       4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4], dtype=int32)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kmeans.labels_+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/proplot/ui.py:492: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  **kwargs\n"
+     ]
+    },
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c21441498eec4357b04e1c02b375cb8f",
+       "model_id": "51ff275806b74a01b742d009c48c66ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,30 +471,30 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f72df9b7050>]"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "plt.figure()\n",
-    "plt.plot(h_lon,h_lat,'ob' )\n",
-    "plt.plot(lon_mean, lat_mean,'.r')"
+    "fig1, ax1 = plot.subplots(ncols=1, nrows=2, share=0, width=5, height=10)\n",
+    "\n",
+    "fig1.suptitle(\"Classified labels along transect\")\n",
+    "\n",
+    "ax1[0].set_ylabel('')\n",
+    "ax1[0].set_xlabel('')\n",
+    "\n",
+    "ax1.format(\n",
+    "        abc=True, abcloc='ul',\n",
+    "        ygridminor=True,\n",
+    "        ytickloc='both', yticklabelloc='left'\n",
+    ")\n",
+    "\n",
+    "# Residual histograms\n",
+    "ax1[0].imshow(np.transpose(data),vmin=0,vmax=30,cmap='inferno')\n",
+    "ax1[0].colorbar(h)\n",
+    "\n",
+    "# Classified labels\n",
+    "ax1[1].scatter(range(0,data.shape[0]), kmeans.labels_, c=kmeans.labels_, cmap='inferno')\n",
+    "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
