--- a/scripts/Antarctica_kmeans_test1.ipynb
+++ b/scripts/Antarctica_kmeans_test1.ipynb
@@ -224,22 +224,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2> Plotting track on map</a>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[-70.56 -69.29 -69.29 -70.56 -70.56]\n",
-      "[33.73 33.73 31.5  31.5  33.73]\n"
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:8: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  \n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4da60914ef34af9ae835ad6aab1a760",
+       "model_id": "07f0f7123d1b4d1eb3488a75dbe43340",
        "version_major": 2,
        "version_minor": 0
       },
@@ -249,59 +256,8 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'cmap': 'gray', 'clim': [14000, 17000], 'extent': array([1114050., 1262050., 1773825., 1938825.]), 'origin': 'lower'}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 1.0, ' Area used for search')"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "spatial_extent = np.array(spatial_extent)\n",
-    "lat=spatial_extent[[1, 3, 3, 1, 1]]\n",
-    "lon=spatial_extent[[2, 2, 0, 0, 2]]\n",
-    "print(lat)\n",
-    "print(lon)\n",
-    "# project the coordinates to Antarctic polar stereographic\n",
-    "xy=np.array(pyproj.Proj(3031)(lon, lat))\n",
-    "# get the bounds of the projected coordinates \n",
-    "XR=[np.nanmin(xy[0,:]), np.nanmax(xy[0,:])]\n",
-    "YR=[np.nanmin(xy[1,:]), np.nanmax(xy[1,:])]\n",
-    "MOA=pc.grid.data().from_geotif(os.path.join(data_root, 'MOA','moa_2009_1km.tif'), bounds=[XR, YR])\n",
-    "\n",
-    "# show the mosaic:\n",
-    "plt.figure()\n",
-    "MOA.show(cmap='gray', clim=[14000, 17000])\n",
-    "plt.plot(xy[0,:], xy[1,:])\n",
-    "# This still needs to be fixed in order to properly display the transect on the map\n",
-    "#plt.plot(lon_mean,lat_mean,transform=ccrs.SouthPolarStereo(), c='darkred')\n",
-    "plt.title(' Area used for search')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2> Plotting track on map</a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "spatial_extent_ps = [spatial_extent[0], spatial_extent[2], spatial_extent[1], spatial_extent[3]]\n",
     "\n",
@@ -327,9 +283,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:1: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e222d87d785241ba89721fe9d74e792d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x7fd9e4400490>]"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plt.figure()\n",
     "plt.plot(h_lon,h_lat,'ob' )\n",
@@ -354,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -363,19 +352,19 @@
      "text": [
       "Training data shape: (523, 350)\n",
       "\n",
-      "Classified labels: [0 0 0 0 0 2 2 2 2 2 2 2 0 0 2 2 2 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 2 0 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 2 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 2 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      "Classified labels: [0 0 0 0 0 3 3 3 3 3 3 3 0 0 3 3 3 3 3 3 3 3 3 3 3 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 3 0 3 3 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 3 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 3 0 0 0 0 3 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
       " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
       " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
       " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 2 2 2 0 0 0 0 0 0 0 0 0 2 0 0 0 0 0 0 2 2 2 0 0 0 2 2 2 2 2 2 2 2 2 0 0 2\n",
-      " 3 2 2 2 2 3 3 3 3 2 2 2 2 2 2 3 3 3 3 3 3 2 2 2 2 3 3 3 1 1 3 3 3 1 1 1 1\n",
-      " 3 2 2 3 3 1 1 1 1 1 1 1 3 2 1 1 1 2 2 2 2 2 1 1 3 3 2 2 3 3 3 3 1 1 1 1 3\n",
-      " 3 3 1 3 3 1 1 3 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 3 1 1 1 1 1\n",
-      " 1 3 3 1 1 3 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 3 3 3 2 2 2 2 2 2 2 2\n",
-      " 0 2 2 2 2 2 2 2 2 2 2 0 2 0 2 2 2 2 2 2 2 2 2 2 2 2 3 2 2 3 2 2 2 2 2 2 2\n",
-      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 3 3 2 2 2 2 2 2 3 2 3 3 1 1 1 1 1 1 1 1\n",
+      " 3 3 3 0 0 0 0 0 0 0 0 0 3 0 0 0 0 0 0 3 3 3 0 0 0 3 3 3 3 3 3 3 3 3 0 0 3\n",
+      " 2 3 3 3 3 2 2 2 2 3 3 3 3 3 3 2 2 2 2 2 2 3 3 3 3 2 2 2 1 1 2 2 2 1 1 1 1\n",
+      " 2 3 3 2 2 1 1 1 1 1 1 1 2 3 1 1 1 3 3 3 3 3 1 1 2 2 3 3 2 2 2 2 1 1 1 1 2\n",
+      " 2 2 1 2 2 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1\n",
+      " 1 2 2 1 1 2 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 2 2 2 3 3 3 3 3 3 3 3\n",
+      " 0 3 3 3 3 3 3 3 3 3 3 0 3 0 3 3 3 3 3 3 3 3 3 3 3 3 2 3 3 2 3 3 3 3 3 3 3\n",
+      " 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 2 2 3 3 3 3 3 3 2 3 2 2 1 1 1 1 1 1 1 1\n",
       " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
       " 1 1 1 1 1]\n",
       "\n",
@@ -387,7 +376,7 @@
     "print(\"Training data shape: \" + str(data.shape))\n",
     "\n",
     "# Use int random_state in order to make centroid initialization deterministic\n",
-    "kmeans = KMeans(n_clusters=4, random_state=None).fit(data)\n",
+    "kmeans = KMeans(n_clusters=4, random_state=1).fit(data)\n",
     "\n",
     "# Display classified labels\n",
     "print(\"\\nClassified labels: \" + str(kmeans.labels_))\n",
@@ -404,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +407,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60bf5bd9b15346a09cb64d509ef48df9",
+       "model_id": "2012130aa8c54231807a0c92fddfb621",
        "version_major": 2,
        "version_minor": 0
       },
@@ -431,7 +420,7 @@
     }
    ],
    "source": [
-    "fig1, ax1 = plot.subplots(ncols=1, nrows=2, share=0, width=5, height=8)\n",
+    "fig1, ax1 = plot.subplots(ncols=1, nrows=2, share=0, width=5, height=6)\n",
     "\n",
     "fig1.suptitle(\"Classified labels along transect\")\n",
     "\n",
@@ -448,10 +437,94 @@
     "ax1[0].colorbar(h)\n",
     "\n",
     "# Classified labels\n",
-    "ax1[1].scatter(range(0,data.shape[0]), kmeans.labels_, c=kmeans.labels_, cmap='inferno')\n",
+    "ax1[1].scatter(range(0,data.shape[0]), kmeans.labels_, c=kmeans.labels_, cmap='viridis')\n",
     "ax1[1].set_ylabel('Classification label')\n",
     "ax1[1].set_xlabel('Segments along track')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We display the labels on top of the raster map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-70.56 -69.29 -69.29 -70.56 -70.56]\n",
+      "[33.73 33.73 31.5  31.5  33.73]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:14: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "43133013e344405eb337096ff52a22cf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cmap': 'gray', 'clim': [14000, 17000], 'extent': array([1114050., 1262050., 1773825., 1938825.]), 'origin': 'lower'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5, 1.0, 'Labeled transect')"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spatial_extent = np.array(spatial_extent)\n",
+    "lat=spatial_extent[[1, 3, 3, 1, 1]]\n",
+    "lon=spatial_extent[[2, 2, 0, 0, 2]]\n",
+    "print(lat)\n",
+    "print(lon)\n",
+    "# project the coordinates to Antarctic polar stereographic\n",
+    "xy=np.array(pyproj.Proj(3031)(lon, lat))\n",
+    "# get the bounds of the projected coordinates \n",
+    "XR=[np.nanmin(xy[0,:]), np.nanmax(xy[0,:])]\n",
+    "YR=[np.nanmin(xy[1,:]), np.nanmax(xy[1,:])]\n",
+    "MOA=pc.grid.data().from_geotif(os.path.join(data_root, 'MOA','moa_2009_1km.tif'), bounds=[XR, YR])\n",
+    "\n",
+    "# show the mosaic:\n",
+    "plt.figure()\n",
+    "MOA.show(cmap='gray', clim=[14000, 17000])\n",
+    "ax.stock_img()\n",
+    "plt.plot(xy[0,:], xy[1,:])\n",
+    "# This still needs to be fixed in order to properly display the transect on the map\n",
+    "x_polar, y_polar=np.array(pyproj.Proj(3031)(lon_mean, lat_mean))\n",
+    "plt.scatter(x_polar, y_polar, c=kmeans.labels_)\n",
+    "plt.title('Labeled transect')"
    ]
   }
  ],
